--- a/src/styles/detailsProduct.css
+++ b/src/styles/detailsProduct.css
@@ -517,10 +517,13 @@ h6 {
     display: none;
 }
 
-#scrollModalAddToCart {
+/* #scrollModalAddToCart {
     display: none;
-}
+} */
 
+#scrollModalAddToCart {
+    visibility: hidden;
+}
 
 .scroll-modal-content {
     display: none;
@@ -807,16 +810,28 @@ h6 {
 
     #scrollModalAddToCart {
         position: fixed;
-        bottom: 0px;
-        left: 0px;
+        bottom: 0;
+        left: 0;
         background-color: #fff;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         padding: 10px;
         border-radius: 4px;
-        display: none;
         z-index: 9999;
         width: 100vw;
         height: 200px;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+    }
+
+    #scrollModalAddToCart.visible {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    #scrollModalAddToCart.hidden {
+        visibility: hidden;
+        opacity: 0;
     }
 
     .scroll-modal-content {
